project1_2/Services/watchappv1Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: watchappv1
spec: 
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata: 
     labels:
      name: watchappv1
    spec:
     containers:
     - name: watchappv1
       image: maltahan/watchappv1:v2  
       imagePullPolicy: IfNotPresent       
       ports:
       - containerPort: 4000
