project1_2/Services/watchimageDeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: watchimage
spec: 
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata: 
     labels:
      name: watchimage
    spec:
     containers:
     - name: watchimage
       image: maltahan/watchimage:v1  
       imagePullPolicy: IfNotPresent       
       ports:
       - containerPort: 3000
