project1_2/Services/watchappv2Service.yaml
apiVersion: v1
kind: Service
metadata:
    name: watchappv2
spec: 
  ports:
   - port: 5000
     targetPort: 5000
     protocol: TCP
  selector:
    name: watchappv2
  type: NodePort
