project1_2/Services/watchimageService.yaml
apiVersion: v1
kind: Service
metadata:
    name: watchimage
spec: 
  ports:
   - port: 3000
     targetPort: 3000
     protocol: TCP
  selector:
    name: watchimage
  type: NodePort
